--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start-server": "tsnd --respawn ./src/main/server.ts",
+    "test": "jest --passWithNoTests --silent --noStackTrace --no-cache"
+  },
   "dependencies": {
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.4",
     "axios": "^1.5.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "jest": "^29.6.4",
     "nodemon": "^3.0.1",
     "pg-promise": "^11.5.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.4.1"
   }
 }
